# casemail-imap-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Launch CaseMail.cmd  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: technical-design.md
src/casemail_imap_mcp/: __init__.py  admin.py  attachments.py  auth.py  cache.py  config.py  imap_client.py  logging_utils.py  main.py  models.py  parsing.py  security.py  server.py  service.py  sync_service.py  threading_utils.py
tests/: conftest.py
tests/integration/: test_greenmail_integration.py
tests/unit/: test_admin_config.py  test_attachments.py  test_auth.py  test_imap_read_only.py  test_parsing.py  test_security.py  test_sync_cache.py  test_threading_utils.py
tools/: CaseMailLauncher.cs  build_launcher.ps1
